examples/k8s_cli/k8s_deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cci-deploy-demo
  labels:
    circleci.com/component-name: cci-deploy-demo
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    # you can also use common app label, it depends how the deployment is set up.
    # app: cci-deploy-demo
    circleci.com/component-name: cci-deploy-demo
